<resources>
    <string name="app_name">MuscleExercises</string>
    <string name="title_activity_muscule">MusculeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="arm_title1">1. Incline Bicep Curl</string>
    <string name="arm_title2">2. Concentration Curl</string>
    <string name="arm_title3">3. Reverse Curl Straight Bar</string>
    <string name="arm_ex1">How to: Sit on an incline bench and hold a dumbbell in each hand at arm\'s length. Use your biceps to curl the dumbbell until it reaches your shoulder, then lower them back down to your side and repeat.\n\nWhy: Beware: this position isolates the biceps and prevents other muscles from sharing the load. You can work the entire muscle by turning your wrists out slightly and keeping your elbows pointed towards the floor throughout the rep, a range of motion not available in other arm exercises.</string>
    <string name="arm_ex2">How to: Sit down on the bench and rest your right arm against your right leg, letting the weight hang down. Curl the weight up, pause, and then lower. Repeat with the other arm.\n\nWhy: This isolates the arm flexors and hits the lateral head of the biceps for peak performance (and appearance).</string>
    <string name="arm_ex3">How to: Stand and grip a barbell at shoulder width with an overhand grip. Flex the elbows and rotate the barbell upwards, only using your forearms, until your palms face out and the barbell is in line with your shoulders. Return it back down slowly and repeat.\n\nWhy: Often neglected because it works the brachialis, an invisible muscle lower down your upper arm — but one essential for bigger biceps. Train it well and the brachialis pushes the peak of your bicep muscle up higher, making for a more impressive flex and bigger &#8211;looking arms.</string>

    <string name="chest_title1">1. Dumbbell Bench Press</string>
    <string name="chest_title2">2. Incline Bench Press</string>
    <string name="chest_title3">3. Machine Chest Press</string>
    <string name="chest_ex1">Why it\'s on the list: Whether dumbbell or barbell presses are better for growth is an age &#8211;old weight &#8211;room debate. Luckily, you can do both! But there\'s little doubt that the dumbbell variation has more versatility throughout the beginning, middle, and end of a chest workout.\n\nSome other big plusses for dumbbells: Each side\'s musculature must work independently, creating more balanced strength and size. Dumbbells also allow a longer range of motion, which some studies say can lead to muscle growth. Plus, you can more easily tweak your grip to create variety and a new stimulus on chest day.\n\nIn your workout: At least some of the time, do flat dumbbell presses toward the start of your chest workout for heavy sets in lower rep ranges. They can also work well for high reps later in a chest workout, either flat or on an incline or decline.</string>
    <string name="chest_ex2">Why it\'s on the list: Not only is the incline bench press a classic way to build the upper chest, many lifters find them to be a more comfortable "main lift" for the shoulders than flat benching. It\'s great with a barbell or multi grip bar, but maybe be even better with dumbbells, since you can customize your grip to increase focus on the upper pecs.\n\nPro tip: Many benches are fixed at a very steep angle, which EMG results have shown works the front delts as much as the chest. If possible, go for a lower incline, such as 30 degrees, to focus squarely on the upper pecs.\n\n</string>
    <string name="chest_ex3">Why it\'s on the list: Free–weight pressing moves on a flat bench are great, but machine press and cable press variations have some unique benefits. For one, it\'s easier to slow down the repetition, both in the concentric and eccentric phases. Stack–loaded machines are also great for quickly doing dropsets.\n\nFeel like a step down from free weights? It shouldn\'t. EMG research demonstrates that the machine bench press recruits the shoulders far less than free &#8211;weight variations. This allows you to really target your pecs.\n\n</string>

    <string name="abs_title1">1. Cable Woodchopper</string>
    <string name="abs_title2">2. Hollow Rocks</string>
    <string name="abs_title3">3. Sandbag Sit-Up</string>
    <string name="abs_ex1">1. Set the cable machine to the highest position with and stand side on to the weights with your back to the machine.\n2. Grabbing the handle with both hands take a step away from the tower and put your feet shoulder width apart.\n3. Extend your arms fully and pull the handle down and across your body whilst rotating your torso.\n4. Bend your knees and pivot your back foot and slowly return to the start position, swapping sides after each set.</string>
    <string name="abs_ex2">1. Sit up with your legs straight and extend your hands up above your head\n2. Raise your legs to make your body form a dish shape.\n3. Keep your body rigid as you rock back and forth to strengthen your core.</string>
    <string name="abs_ex3">1. Lie with your back on the ground and you knees bent upwards.\n2. Hold a sandbag up above you with both extended arms and crunch forwards as you tense your core so your body performs a V shape with your thighs.\n3. Carefully lower down and repeat.</string>

    <string name="legs_title1">1. Front Squat</string>
    <string name="legs_title2">2. Dumbbell Deadlift</string>
    <string name="legs_title3">3. Reverse Lunge</string>
    <string name="legs_ex1">AT says: Probably the heaviest squat you’ll be able to muster using just dumbbells— and when it comes to adding size to your legs, every kilo counts. You’ll also be building a stronger core and upper back as you resist being dragged forward and folded up like origami.\nHow to do it: Clean the heaviest set of dumbbells you can muster onto the front of your shoulders (A). From here, drop into a front squat, until your thighs pass parallel to the ground (B), before driving back up. Your grip and upper back may be tiring but keep upright, keeping your core tight throughout is crucial.</string>
    <string name="legs_ex2">AT says: Although you may not be able to go as heavy as with a barbell, dumbbell deadlifts shift the focus onto your legs and allow you to really drive from the lower body, avoiding all-to-common lower back pains. Building stronger quads, whilst also putting you in a safer position to pull heavy weights from the floor, what’s not to like?\nHow to do it: Hold a pair of heavy dumbbells at your sides and with a flat back, push your glutes back, hinge down and touch your bells to the ground (A). Engage your lats and stand upright, ‘pushing the ground away’ with your feet, ensuring your hips don’t shoot up too early (B). Your arms should be hanging straight throughout this movement, think of them as ropes connecting you to your dumbbells.</string>
    <string name="legs_ex3">AT says: Whether you hold your dumbbells at your sides, or in the ‘front rack’ position, the reverse lunge is a great option for everyone from beginners to seasoned pros. ‘Unilateral strength’—ie. working one side of the body at a time— is essential for addressing imbalances, avoiding injury and building the type of strength and coordination that carries over to sports such as football or rugby.\nHow to do it: Hold your dumbbells with straight arms by your sides (A). Keeping your chest up at all times, take a step backward with one leg, bending your front knee until the back knee touches the ground (B). Stand up explosively, pause and repeat with the other leg. Keep your torso upright throughout and control the descent of each rep. Avoid simply ‘dropping’ to the ground.</string>
</resources>